crates/type_checker/src/tests/snapshots/def_func_void_ret_void_body.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 369
expression: "(test[1], res)"
---
- "\nfn bar() { }\nfn foo() {\n    bar()\n}\n"
- Ok:
    nodes:
      - kind:
          Fn:
            proto:
              name: bar
              args: []
              ret_ty: Void
              is_extern: false
            body:
              kind:
                Block:
                  list: []
              ty: Void
        ty: ~
      - kind:
          Fn:
            proto:
              name: foo
              args: []
              ret_ty: Void
              is_extern: false
            body:
              kind:
                Block:
                  list:
                    - kind:
                        Call:
                          name: bar
                          args: []
                      ty: Void
              ty: Void
        ty: ~

