crates/type_checker/src/tests/snapshots/ident_basic.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 484
expression: "(test[1], res)"
---
- "\nfn foo(x: int) { x }\n"
- Ok:
    nodes:
      - Stmt:
          Fn:
            proto:
              name: foo
              args:
                - - x
                  - Int32
              ret_ty: Void
            body:
              Expr:
                Block:
                  list:
                    - Expr:
                        Ident:
                          name: x
                          ty: Int32
                  ty: Int32

