crates/type_checker/src/tests/snapshots/let_basic.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 534
expression: "(test[1], res)"
---
- "\nfn foo() {\n    let x: int = 3\n}\n"
- Ok:
    nodes:
      - Stmt:
          Fn:
            proto:
              name: foo
              args: []
              ret_ty: Void
            body:
              Block:
                list:
                  - Stmt:
                      Let:
                        name: x
                        antn: Int32
                        init:
                          Expr:
                            Lit:
                              value:
                                Int32: 3
                              ty: Int32
                ty: Void

