crates/type_checker/src/tests/snapshots/let_basic_no_init.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 542
expression: "(test[1], res)"
---
- "\n        fn foo() {\n            let x: int\n        }\n        "
- Ok:
    nodes:
      - node:
          Fn:
            proto:
              name: foo
              args: []
              ret_ty: void
              is_extern: false
            body:
              node:
                Block:
                  list:
                    - node:
                        Let:
                          name: x
                          antn: int
                          init:
                            node:
                              Lit:
                                value:
                                  Int32: 0
                            ty: Int32
                      ty: ~
              ty: Void
        ty: ~

