crates/type_checker/src/tests/snapshots/scope_basic_shadowing.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 760
expression: "(test[1], res)"
---
- "\nfn foo(a: int) -> int {\n    let b: int = 1\n    {\n        let b: bool = false\n    }\n    b\n}\n"
- Ok:
    nodes:
      - kind:
          Fn:
            proto:
              name: foo
              args:
                - - a
                  - Int32
              ret_ty: Int32
              is_extern: false
            body:
              kind:
                Block:
                  list:
                    - kind:
                        Let:
                          name: b
                          antn: Int32
                          init:
                            kind:
                              Lit:
                                value:
                                  Int32: 1
                            ty: Int32
                      ty: ~
                    - kind:
                        Block:
                          list:
                            - kind:
                                Let:
                                  name: b
                                  antn: Bool
                                  init:
                                    kind:
                                      Lit:
                                        value:
                                          Bool: false
                                    ty: Bool
                              ty: ~
                      ty: Void
                    - kind:
                        Ident:
                          name: b
                      ty: Int32
              ty: Int32
        ty: ~

