crates/type_checker/src/tests/snapshots/scope_for_scope.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 760
expression: "(test[1], res)"
---
- "\nlet x: float = 1.0\nfor x: int = 1; x < 10; 1 {\n    x\n}\nx\n"
- Ok:
    nodes:
      - node:
          Let:
            name: x
            antn: Float
            init:
              node:
                Lit:
                  value:
                    Float: 1.0
              ty: Float
        ty: ~
      - node:
          For:
            start_name: x
            start_antn: Int32
            start_expr:
              node:
                Lit:
                  value:
                    Int32: 1
              ty: Int32
            cond_expr:
              node:
                BinOp:
                  op: Lt
                  lhs:
                    node:
                      Ident:
                        name: x
                    ty: Int32
                  rhs:
                    node:
                      Lit:
                        value:
                          Int32: 10
                    ty: Int32
              ty: Bool
            step_expr:
              node:
                Lit:
                  value:
                    Int32: 1
              ty: Int32
            body:
              node:
                Block:
                  list:
                    - node:
                        Ident:
                          name: x
                      ty: Int32
              ty: Int32
        ty: ~
      - node:
          Ident:
            name: x
        ty: Float

