crates/type_checker/src/tests/snapshots/unary_bad_type_1.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 652
expression: "(test[1], res)"
---
- "\nfn foo() {\n    -false\n}\n"
- Err: "Expected numeric type in unary operation `-`, got rhs: `bool`"

